# dtef-basic-tests

./: .gitignore  CMakeLists.txt  ClasseIntegracao.cpp  ClasseIntegracao.h  client.js  integracao_dtef.js  main.cpp  main.js  main2.js  mainws.cpp  package-lock.json  package.json  test_std.cpp
.github/workflows/: Test, Build and Test-main.yml
src/: CallOnDtor.hpp  ClasseIntegracao.cpp  ClasseIntegracao.h  ParseLog.hpp  mainws.cpp  stdafx.h
tests/: CMakeLists.txt  TesteParseLog.cpp  testNumerais.cpp
